# llvm_jit_compile

./: .gitignore  LICENSE  README.md  main.cpp  new_try.cpp  sample02.cpp
basic/: .gitignore  adaptive_callee.cpp  add.cpp  add_simple.cpp  alloca.cpp  call.cpp  call01.ll  call02.ll  controlflow.cpp  graph.cpp  howtobuildonm1.md  jit_orc.cpp  jit_orc_lljit.cpp  summation.cpp  va_arg.md  va_arg_llvm_example.cpp  va_arg_llvm_example.ll  va_arg_llvm_ir.cpp  value_embed.cpp  variableArguments.cpp
computationalGraph/: CMakeLists.txt  Execution.cpp  Execution.hpp  Expr.cpp  Expr.hpp  ExprAST.cpp  ExprAST.hpp  Func.cpp  Func.hpp  IRVisitor.cpp  IRVisitor.hpp  Var.cpp  Var.hpp  VariableParserVisitor.cpp  VariableParserVisitor.hpp  new_try.cpp
first_sample/: call03.ll  llvm_lexer.cpp  pointer.cpp  sample01.cpp  sample02.cpp
llvm_tutorial/: chap03.cpp  toy.cpp
